prepping a bigger example because i need to figure out handleresponse too

--- a/crux-example/shared_types/Cargo.toml
+++ b/crux-example/shared_types/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [build-dependencies]
 anyhow.workspace = true
 crux_core = { workspace = true, features = ["typegen"] }
+crux_http = { workspace = true, features = ["typegen"] }
 shared = { path = "../shared", features = ["typegen"] }
 serde_json = "1"
