--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ links = "tauri-plugin-crux"
 tauri = { version = "2.5.0" }
 serde = "1.0"
 thiserror = "2"
-crux_core = "0.14"
+crux_core = { path = "../crux/crux_core" } # "0.14"
 serde_json = "1.0.140"
 base64 = "0.22.1"
 # use crux's version
 bincode = "=1.3.3"
 slab = "0.4.9"
+erased-serde = "0.4.6"
 
 [build-dependencies]
 tauri-plugin = { version = "2.2.0", features = ["build"] }
