--- a/crux-example/shared/Cargo.toml
+++ b/crux-example/shared/Cargo.toml
@@ -14,10 +14,18 @@ typegen = ["crux_core/typegen"]
 [dependencies]
 anyhow.workspace = true
 crux_core.workspace = true
+crux_http.workspace = true
 serde = { workspace = true, features = ["derive"] }
 lazy_static = "1.5.0"
 uniffi = { version = "0.29.1" }
 wasm-bindgen = "0.2"
+chrono = { version = "0.4.40", features = ["serde"] }
+url = "2.5.4"
+async-std = "1.13.1"
+async-sse = "5.1.0"
+futures = "0.3.31"
+serde_json = "1.0.140"
+
 
 [target.uniffi-bindgen.dependencies]
 uniffi = { version = "0.29.1", features = ["cli"] }
