--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-process-event", "allow-view"]
+permissions = ["allow-process-event", "allow-handle-response", "allow-view"]
