wip: add native capability support?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ links = "tauri-plugin-crux"
 tauri = { version = "2.5.0" }
 serde = "1.0"
 thiserror = "2"
-crux_core = { git = "ssh://git@github.com/o0Ignition0o/crux.git", branch = "feat/decouple_registry_and_bridge" } # "0.14"
+crux_core = { path = "../crux/crux_core" } # { git = "ssh://git@github.com/o0Ignition0o/crux.git", branch = "feat/decouple_registry_and_bridge" } # "0.14"
 serde_json = "1.0.140"
 base64 = "0.22.1"
 # use crux's version
